objects/kugo2p__ServiceDeliverySchedule__c.object
<CustomObject>
    <description>Kugamon - Junction object that helps construct Invoice Lines from Order Service Lines.</description>
    <fields>
        <fullName>kugo2p__AmountInvoicedToDate__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Amount Invoiced to Date</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>kugo2p__DateServiceDelivered__c</fullName>
        <inlineHelpText>This date equals the Service End Date of the Service found in the reference Order</inlineHelpText>
        <label>Date Service Delivered</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>kugo2p__DateServiceStart__c</fullName>
        <label>Date Service Start</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>kugo2p__InvoiceScheduledAmount__c</fullName>
        <label>Invoice Scheduled Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>kugo2p__InvoiceScheduledQuantity__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Invoice Scheduled Quantity</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>kugo2p__InvoiceUnscheduledAmount__c</fullName>
        <formula>kugo2p__ServiceAmount__c - kugo2p__InvoiceScheduledQuantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invoice Unscheduled Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>kugo2p__InvoiceUnscheduledQuantity__c</fullName>
        <formula>kugo2p__Quantity__c - kugo2p__InvoiceScheduledQuantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invoice Unscheduled Quantity</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>kugo2p__InvoicedAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Invoiced Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>kugo2p__InvoicedQuantity__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Invoiced Quantity</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>kugo2p__QuantityInvoicedToDate__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Quantity Invoiced to Date</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>kugo2p__Quantity__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Calculated Quantity</label>
        <precision>18</precision>
        <required>true</required>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>kugo2p__RecordStatus__c</fullName>
        <defaultValue>&quot;Scheduled&quot;</defaultValue>
        <label>Record Status</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__SalesOrderServiceLine__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order Service Line</label>
        <referenceTo>kugo2p__SalesOrderServiceLine__c</referenceTo>
        <relationshipLabel>Service Deliveries</relationshipLabel>
        <relationshipName>Service_Delivery_Schedule</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>kugo2p__SalesOrder__c</fullName>
        <label>Order Number</label>
        <referenceTo>kugo2p__SalesOrder__c</referenceTo>
        <relationshipLabel>Service Deliveries</relationshipLabel>
        <relationshipName>Service_Delivery_Schedule</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>kugo2p__SalesPrice__c</fullName>
        <formula>kugo2p__SalesOrderServiceLine__r.kugo2p__SalesPrice__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>kugo2p__ServiceAmount__c</fullName>
        <label>Service Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>kugo2p__ServiceLineQuantity__c</fullName>
        <formula>kugo2p__SalesOrderServiceLine__r.kugo2p__Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Line Quantity</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>kugo2p__Service__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service</label>
        <referenceTo>kugo2p__AdditionalProductDetail__c</referenceTo>
        <relationshipName>Service_Delivery_Schedule</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>kugo2p__Status__c</fullName>
        <formula>kugo2p__RecordStatus__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <label>Service Delivery</label>
    <listViews>
        <fullName>kugo2p__All</fullName>
        <columns>NAME</columns>
        <columns>kugo2p__SalesOrderServiceLine__c</columns>
        <columns>kugo2p__SalesOrder__c</columns>
        <columns>kugo2p__Service__c</columns>
        <columns>kugo2p__DateServiceStart__c</columns>
        <columns>kugo2p__RecordStatus__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Service Schedule</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Deliveries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>